# CountdownWordSearch

./: CMakeLists.txt  README.md  main.cpp
headers/countdown/: Trie.h  TrieNode.h
resources/: words2.txt
source/countdown/: Trie.cpp  TrieNode.cpp
